# Omniphony

./: .gitignore  README.md
.github/workflows/: release.yml
SpatialVisualizer/: README.md
SpatialVisualizer/src/: app.js
SpatialVisualizer/src-tauri/: Cargo.toml
SpatialVisualizer/src-tauri/icons/: icon.icns
SpatialVisualizer/src-tauri/src/: app_state.rs  main.rs  osc_listener.rs  osc_parser.rs
SpatialVisualizer/src/i18n/: de.json  en.json  fr.json  it.json  ja.json  pt-BR.json  zh-CN.json
docs/: custom-render-backend-integration.fr.md  custom-render-backend-integration.md  experimental-gain-algorithm.fr.md  frequency-band-crossover.fr.md  from-file-evaluator-architecture.md  install_plan.md  latency-regulation.fr.md  latency-regulation.md  pipewire-bridge-investigation.md  ramp-strategy-architecture.fr.md  render-backend-refactor-plan.fr.md  render-model-evaluation-architecture.fr.md  runtime-control-refactor.md  studio-orender-state-architecture.fr.md  threejs-texture-corruption-notes.md
gsrd/: BUILD.md  Cargo.toml  OSC_PROTOCOL.md  QUICKSTART.md  README.md  build.rs  deny.toml
gsrd/audio_output/: Cargo.toml
gsrd/audio_output/src/: asio.rs  pipewire.rs
gsrd/bridge_api/src/: lib.rs
gsrd/layouts/: 2.0.yaml  5.0.yaml  6.1.yaml  7.1.4.yaml  README.md
gsrd/renderer/: build.rs
gsrd/renderer/src/: config.rs  delay_line.rs  live_params.rs  metering.rs  osc_output.rs  spatial_renderer.rs  speaker_layout.rs
gsrd/scripts/windows/: build_saf.bat
gsrd/spdif/src/: lib.rs
gsrd/src/: bridge_loader.rs  events.rs  main.rs
gsrd/src/cli/: command.rs  generate_vbap.rs
gsrd/sys/src/: shutdown.rs  windows.rs
layouts/: 2.0.yaml  2.1.yaml  4.0.yaml  4.1.yaml  5.0.yaml  5.1.yaml  6.1.yaml  7.1.2.yaml  7.1.4.yaml  7.1.yaml  9.1.6.yaml  README.md
omniphony-renderer/: .gitignore  AUDIO_INPUT_PLAN.md  BRIDGE_API.md  BUILD.md  BUILDING_WINDOWS.md  Cargo.toml  OSC_PROTOCOL.md  QUICKSTART.md  README.md
omniphony-renderer/.github/workflows/: release.yml
omniphony-renderer/audio_input/: Cargo.toml  build.rs
omniphony-renderer/audio_input/src/: bridge.rs  control.rs  lib.rs  pipewire.rs  pipewire_client_node.rs  pipewire_exported.rs  pipewire_legacy.rs  pipewire_pods.rs
omniphony-renderer/audio_output/: Cargo.toml
omniphony-renderer/audio_output/src/: adaptive_runtime.rs  asio.rs  control.rs  lib.rs  pipewire.rs  resampler_fifo.rs  ring_buffer_io.rs
omniphony-renderer/bridge_api/: Cargo.toml
omniphony-renderer/layouts/: 5.1.yaml  7.1.2.yaml  7.1.yaml  9.1.6.yaml  README.md
omniphony-renderer/renderer/: Cargo.toml  build.rs
omniphony-renderer/renderer/src/: backend_registry.rs  config.rs  lib.rs  live_params.rs  metering.rs  osc_output.rs  render_backend.rs  spatial_renderer.rs  speaker_layout.rs
omniphony-renderer/renderer/src/crossover/: bands.rs  filter.rs  mod.rs
omniphony-renderer/renderer/src/ramp_strategy/: gain_table.rs  mod.rs  position.rs
omniphony-renderer/renderer/src/render_backend/: barycenter_backend.rs  evaluation_artifact.rs  experimental_distance_backend.rs  file_loaded_evaluator.rs  vbap_backend.rs
omniphony-renderer/renderer/src/spatial_vbap/: convhull.rs  distance.rs  mod.rs  panner.rs  vbap_native.rs
omniphony-renderer/renderer/src/spatial_vbap/panner/: gain_source.rs  io.rs  native_backend.rs  runtime.rs  saf_backend.rs  tests.rs
omniphony-renderer/runtime_control/: Cargo.toml
omniphony-renderer/runtime_control/src/: command.rs  context.rs  lib.rs  osc.rs  persist.rs  snapshot.rs
omniphony-renderer/scripts/windows/: build_openblas.bat
omniphony-renderer/spdif/: Cargo.toml
omniphony-renderer/spdif/src/: parser.rs
omniphony-renderer/src/: bridge_loader.rs  main.rs  runtime_osc.rs
omniphony-renderer/src/cli/: command.rs  generate_vbap.rs  list_asio_devices.rs  mod.rs
omniphony-renderer/src/cli/decode/: bootstrap.rs  config_resolution.rs  decode_impl.rs  decoder_thread.rs  handler.rs  live_input.rs  mod.rs  output.rs  output_runtime_sync.rs  sample_write.rs  session_run.rs  spatial_metadata.rs  state.rs  virtual_bed.rs  writer_lifecycle.rs
omniphony-renderer/src/runtime_osc/: client_registry.rs  dispatch.rs  export.rs  metadata_emit.rs  recompute.rs  state_emit.rs  transport.rs
omniphony-renderer/sys/: Cargo.toml
omniphony-renderer/sys/src/: input.rs  lib.rs  live_log.rs  shutdown.rs  windows.rs
omniphony-studio/: PRE-PUBLISH-CHECKLIST.md  README.md  osc_to_carla_bridge.py  package-lock.json  package.json  server.js  vite.config.js  vite.config.mjs
omniphony-studio/assets/: la_dame_de_brassempouy_centered.glb
omniphony-studio/layouts/: README.md
omniphony-studio/public/: app.js  index.html
omniphony-studio/scripts/: prepare-sidecar.mjs
omniphony-studio/src/: app.js  bootstrap-ui.js  coordinates.js  crossover-bands.js  flush.js  i18n.js  index.html  init.js  input.js  layouts.js  log.js  modals.js  mute-solo.js  oscParser.js  picking.js  runtime-audio-state.js  runtime-connection.js  setup-listeners.js  sources.js  speakers.js  state.js  tauri-bridge.js  test-imports.js  trails.js  visual-recovery.js
omniphony-studio/src-tauri/: Cargo.toml  tauri.conf.json
omniphony-studio/src-tauri/icons/: icon.icns
omniphony-studio/src-tauri/src/: app_state.rs  config.rs  layouts.rs  main.rs  osc_listener.rs  osc_parser.rs
omniphony-studio/src/controls/: adaptive.js  audio.js  config.js  distance-diffuse.js  input.js  latency.js  master.js  osc.js  room-geometry.js  spread.js  vbap.js
omniphony-studio/src/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt-BR.json  zh-CN.json
omniphony-studio/src/listeners/: audio-panel-listeners.js  input-panel-listeners.js  layout-listeners.js  modal-and-toggle-listeners.js  renderer-panel-listeners.js  room-geometry-listeners.js  speaker-editor-listeners.js  trails-and-display-listeners.js
omniphony-studio/src/scene/: axes.js  gizmos.js  labels.js  materials.js  setup.js  speaker-heatmap.js
omniphony-studio/src/styles/: app.css
omniphony-studio/test/: layouts.test.js  oscParser.test.js
scripts/: install-jackd-service.bat
(+12 files in other folders)
