[package]
name = "audio_input"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bridge_api = { path = "../bridge_api" }
libc = "0.2"
log = "0.4.27"
renderer = { path = "../renderer" }
serde = { version = "1.0", features = ["derive"] }
spdif = { path = "../spdif" }
sys = { path = "../sys" }

[build-dependencies]
pkg-config = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9.2", features = ["v0_3_34"] }
