[package]
name = "runtime_control"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
audio_input = { path = "../audio_input" }
audio_output = { path = "../audio_output" }
log = "0.4.27"
renderer = { path = "../renderer" }
rosc = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
sys = { path = "../sys" }
