[package]
name = "omniphony-studio"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omniphony-studio"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rosc = "0.10"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
